# prai

./: .env.example  README.md  pyproject.toml  requirements.txt
src/: app.py  azure_devops_service.py  env.py  llm.py  pr_descriptor.py  pr_service.py  pr_tool.py  utils.py
