[tool.poetry]
name = "prai"
version = "0.1.0"
description = ""
authors = ["Bruno Alves <bruno.santos@tegra.com.br>"]
readme = "README.md"
packages = [{ include = "**/*.py", from = "." }]

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
dev = 'PYTHONPATH=$PYTHONPATH:. fastapi dev src/app.py --reload --host 0.0.0.0 --port 3333'
create-migration = "alembic revision --autogenerate -m"
migrate-up = "alembic upgrade head"
migrate-down = "alembic downgrade -1"
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["standard"], version = "^0.115.0" }
langchain = "^0.3.2"
langgraph = "^0.2.34"
langsmith = "^0.1.131"
langchain-groq = "^0.2.0"
langchain-community = "^0.3.1"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.6.9"
httpx = "^0.27.2"
ipykernel = "^6.29.5"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
